# project_6

./: .env  .env.sample  README.md  db.sqlite3  dump_auth.json  gitignore  pyproject.toml
blogs/: admin.py  models.py  services.py  urls.py  views.py
blogs/migrations/: 0001_initial.py  0002_alter_blog_is_published.py
blogs/templates/blogs/: blog_confirm_delete.html  blog_detail.html  blog_form.html  blog_list.html
config/: settings.py  urls.py
mailing/: admin.py  cron.py  form.py  models.py  services.py  urls.py  views.py
mailing/management/commands/: start_mailing.py
mailing/migrations/: 0001_initial.py  0002_mailing_message_alter_client_options_mailinglog_and_more.py  0003_mailing_is_active.py  0004_alter_mailing_intervals_and_more.py  0005_client_is_active_alter_mailinglog_last_mailing.py  0006_remove_mailing_next_date_alter_mailing_intervals_and_more.py  0007_alter_mailinglog_options_mailinglog_client_and_more.py  0008_alter_mailing_intervals.py  0009_client_owner_mailing_owner_mailinglog_owner_and_more.py  0010_alter_mailing_options.py
mailing/templates/: base.html  client_confirm_delete.html  client_detail.html  client_list.html
mailing/templates/includes/: inc_menu.html
mailing/templates/mailing/: base.html  client_confirm_delete.html  client_detail.html  client_form.html  client_list.html  mailing_confirm_delete.html  mailing_detail.html  mailing_form.html  mailing_list.html  mailinglog_detail.html  (+7 more)
users/: form.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_options.py
users/templates/: login.html
(+6 files in other folders)
