[tool.poetry]
name = "project-6"
version = "0.1.0"
description = ""
authors = ["Vladimir Khapaev <khapaev@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12.6"
django = "4.2.2"
psycopg2-binary = "^2.9.9"
black = "^24.8.0"
ipython = "^8.27.0"
pytils = "^0.4.1"
redis = "^5.0.8"
crontab = "^1.0.1"
pillow = "^10.4.0"
python-dotenv = "^1.0.1"
django-crontab = "^0.7.1"
isort = "^5.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

